<resources>
    <string name="app_name">To Do List</string>

    // nothing to show
    <string name="nothing_Text">Nothing To Do</string>

    // Create New To do Class
    <string name="new_Task">What would you like to do ?</string>
    <string name="back">Back Image</string>
    <string name="done">Done Image</string>
    <string name="Enter_Task_Question">What is new Task ? </string>
    <string name="Enter_Task_Answer">Enter Task</string>
    <string name="Enter_Date_Question">What will be the Date ? (Optional)</string>
    <string name="repeat_Question">You Want To Repeat ? (Optional)</string>
    <string name="Enter_Time_Answer">Set Time</string>
    <string name="Enter_Date_Answer">Set Date</string>
    <string name="endlessly_Date">Endlessly</string>
    <string name="calender_icon">Calender icon</string>
    <string name="timer_icon">Timer icon</string>

    // Edit Date Text
    <string name="today_Date">Today</string>
    <string name="yesterday_Date">Yesterday</string>
    <string name="tomorrow_Date">Tomorrow</string>

    // spinner heading
    <string name="spinner_title">Repeat Spinner</string>

    // calendar picker
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>

    // bottom navigation view
    <string name="overdue_Bottom_Navigation">Overdue</string>
    <string name="today_Bottom_Navigation">Today</string>
    <string name="later_Bottom_Navigation">Later</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Action Mode
    <string name="done_Action_Mode">Done</string>
    <string name="delete_Action_Mode">Delete</string>
    <string name="heading_Action_Mode">Select your option</string>

    // more option
    <string name="done_More_Option">Done</string>
    <string name="edit_More_Option">Edit</string>
    <string name="delete_More_Option">Delete</string>

    <string name="notification_title_name"> Reminder </string>



    <!-- Notification Button -->
    <string name="action_Completed">Completed</string>
    <string name="action_Snooze">Snooze</string>
    <string name="action_More">More</string>
    <string name="action_View">View</string>

    <!-- Channel  id type -->
    <string name="Channel_Id_Alert">Alert</string>
    <string name="Channel_Id_Today_List_Alert">Today List Alert</string>
    <string name="Channel_Id_Due_List_Alert">Due List Alert</string>

    <!-- Notification Main Paragraph -->
    <string name="alert_notification_para">Lets Do This Task  - %1$s</string>
    <string name="alert_notification_lines">There are %1$s task to do right now </string>
    <string name="today_Alert_Notification"> only %1$s task for today </string>
    <string name="due_Alert_Notification">  %1$s task which is due </string>


    <!-- Custom Dialog -->
    <string name="custom_Dialog_Done">Have you finish this task ?</string>
    <string name="custom_Dialog_Delete">Are you sure to delete this task ?</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="slide_1_title">Overdue</string>
    <string name="slide_1_desc">The task that you missed to do</string>

    <string name="slide_2_title">Today</string>
    <string name="slide_2_desc">The task for today </string>

    <string name="slide_3_title">Later</string>
    <string name="slide_3_desc">The task that you have to do </string>

    <string name="slide_4_title">Data Restore</string>
    <string name="slide_4_desc">From One Click You Can Restore Your Data To Main Storage</string>

     <!--custom weekdays Setup-->
    <string-array name="custom_Weekdays_Setup">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Every Weekday(Mon-Fri)</item>
        <item>Every Weekday(Sat,Sun)</item>
        <item>Once A Month(Same Date)</item>
        <item>Custom WeekDay</item>
    </string-array>

    <!--prefManager Shared-->
    <string name="shared_preference_name">Shared Preference</string>
    <string name="is_first_time_launch">IsFirstTimeLaunch</string>

    <!--setting Foreground Service-->
    <string name="stop_Foreground_Service">Stop Service</string>
    <string name="why_This_Foreground_Service">Why This ? </string>

    <!--Shared Preference-->
    <string name="today_task_shared_preference">TodayTask Date</string>
    <string name="due_task_shared_preference">DueTask Date</string>
    <string name="background_service_working">Background Service Working</string>
    <string name="foreground_service_working">Foreground Service Working</string>
    <string name="background_restriction">Background Restriction</string>

    <string name="custom_Foreground_Permission">Smart phone are more restrict about background Process from which our background task not working So if you want to us to run background task
        follow the steps which is given on that Website .</string>
    <string name="custom_Foreground_Permission_Follow">Follow It</string>
</resources>
