<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overdue_Tab"
        android:enabled="true"
        android:icon="@drawable/overdue_icon"
        android:title="@string/overdue_Bottom_Navigation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/today_Tab"
        android:enabled="true"
        android:icon="@drawable/today_icon"
        android:title="@string/today_Bottom_Navigation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/overdo_Tab"
        android:enabled="true"
        android:icon="@drawable/overdo_icon"
        android:title="@string/later_Bottom_Navigation"
        app:showAsAction="ifRoom" />
</menu>